# dawith

./: .gitignore  .pre-commit-config.yaml  gunicorn.conf.py  manage.py  pyproject.toml  utils.py
dawith/: asgi.py  settings.py  urls.py  wsgi.py
django_project/: __init__.py  settings.py  urls.py  wsgi.py
django_project/settings/: base.py  dev.py  prod.py
pretotype/: apps.py  models.py  serializers.py  urls.py  views.py
pretotype/migrations/: 0001_initial.py  0002_subscription_referer.py  0003_alter_subscription_index_together.py
static/: site.webmanifest
static/css/: nanumgothic.css
static/css/pretotype/: base.css  base.css.map  base.scss  contact.css  contact.css.map  contact.scss  landing.css  landing.css.map  landing.scss
static/images/: browserconfig.xml
templates/: base.jinja2
templates/pretotype/: contact.jinja2  landing.jinja2
