[tool.poetry]
name = "dawith"
version = "0.1.0"
description = ""
authors = ["HansolLim <dev.hansollim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
